--- a/index.html
+++ b/index.html
@@ -86,8 +86,8 @@
         </main>
         <!-- footer -->
         <footer>
+            <a href="">WebStudio</a>
             <ul>
-                <li> <a href="">WebStudio</a></li>
                 <li> <address>г. Киев, пр-т Леси Украинки, 26</address> </li>
                 <li> <a href="mailto:info@example.com"> info@example.com </a> </li>
                 <li> <a href="tel:++380991111111"> +38 099 111 11 11></a> </li>
