--- a/index.html
+++ b/index.html
@@ -5,52 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webstudio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
-    <body>
+    <body class="page">
         <nav>
             <header>
-                <a href="">WebStudio</a>
-                <ul>
-                    <li><a href="">Студия</a></li>
-                    <li><a href="">Портфолио</a></li>
-                    <li><a href="">Контакты</a></li>
+                <a class="logo" href="">Web<span class="accent">Studio</span></a>
+                <ul class="site-nav">
+                    <li><button type="button">Студия</button></li>
+                    <li><button type="button">Портфолио</button></li>
+                    <li><button type="button">Контакты</button></li>
                 </ul>
-                <ul>
+                <ul class="auth-nav">
                     <li><a href="">info@devstudio.com</a></li>
                     <li><a href="">+38 096 111 11 11</a></li>
                 </ul>
             </header>
         </nav>
         <main>
-            <!-- section1 with main photo -->
-            <section>
-                <h1>Эффективные решения для вашего бизнеса</h1>
+            <!-- section1 hero -->
+            <section class="hero">
+                <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
                 <button type="button">Заказать услугу</button>
             </section>
-            <!-- section2 peculiarities -->
-            <section>
-                <ul>
+            <!-- section2 Features -->
+            <section class="section">
+                <ul class="feature-list">
                     <li>
-                        <h3>Внимание к деталям</h3>
+                        <h3 class="title">Внимание к деталям</h3>
                         <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
                     <li>
-                        <h3>Пунктуальность</h3>
+                        <h3 class="title">Пунктуальность</h3>
                         <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
                     <li>
-                        <h3>Планирование</h3>
+                        <h3 class="title">Планирование</h3>
                         <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
                     <li>
-                        <h3>Современные технологии</h3>
+                        <h3 class="title">Современные технологии</h3>
                         <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
                 </ul>
             </section>
-            <!-- section3 work options -->
-            <section>
-                <h2>Чем мы занимаемся</h2>
+            <!-- section3 work examples -->
+            <section class="section">
+                <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul>
                     <li><a href=""><img src="./images/box1.jpg" width="370" alt="разработка графического шаблона"></a></li>
                     <li><a href=""><img src="./images/box2.jpg" width="370" alt="хорошая комуникация с клиентом"></a></li>
@@ -58,39 +63,39 @@
                 </ul>
             </section>
             <!-- section4 our team -->
-            <section>
-                <h2>Наша команда</h2>
-                <ul>
+            <section class="section">
+                <h2 class="section-title">Наша команда </h2>
+                <ul class="team">
                     <li>
                         <img src="./images/photo1.jpg" width="270" alt="мужчина в очках с бородой">
-                        <h3>Игорь Демьяненко</h3>
+                        <h3 class="team-title">Игорь Демьяненко</h3>
                         <p>Product Designer</p>
                     </li>
                     <li>
                         <img src="./images/photo2.jpg" width="270" alt="девушка блондинка в очках">
-                        <h3>Ольга Репина</h3>
+                        <h3 class="team-title">Ольга Репина</h3>
                         <p>Frontend Developer</p>
                     </li>
                     <li>
                         <img src="./images/photo3.jpg" width="270" alt="парень с бородой">
-                        <h3>Николай Тарасов</h3>
+                        <h3 class="team-title">Николай Тарасов</h3>
                         <p>Marketing</p>
                     </li>
                     <li>
                         <img src="./images/photo4.jpg" width="270" alt="прень с бородой и очками">
-                        <h3>Михаил Ермаков</h3>
+                        <h3 class="team-title">Михаил Ермаков</h3>
                         <p>UI Designer</p>
                     </li>
                 </ul>
             </section>
         </main>
         <!-- footer -->
-        <footer>
-            <a href="">WebStudio</a>
-            <ul>
-                <li> <address>г. Киев, пр-т Леси Украинки, 26</address> </li>
-                <li> <a href="mailto:info@example.com"> info@example.com </a> </li>
-                <li> <a href="tel:++380991111111"> +38 099 111 11 11></a> </li>
+        <footer class="section-last">
+            <a class="logo" href="">Web<span class="accent-secondary">Studio</span></a>
+            <ul class="footer-raws">
+                <li> <address>г. Киев, пр-т Леси Украинки, 26</address></li>
+                <li> <a href="mailto:info@example.com">info@example.com</a></li>
+                <li> <a href="tel:+380991111111">+38 099 111 11 11></a></li>
             </ul>
         </footer>
     </body>
