--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <body class="page">
         <nav>
             <header>
-                <a class="logo" href="">Web<span class="accent">Studio</span></a>
+                <a class="logo" href="/index.html">Web<span class="accent">Studio</span></a>
                 <ul class="site-nav">
-                    <li><button type="button">Студия</button></li>
-                    <li><button type="button">Портфолио</button></li>
-                    <li><button type="button">Контакты</button></li>
+                    <li><a href="">Студия</a></li>
+                    <li><a href="portfolio.html">Портфолио</a></li>
+                    <li><a href="">Контакты</a></li>
                 </ul>
                 <ul class="auth-nav">
                     <li><a href="">info@devstudio.com</a></li>
@@ -91,11 +91,11 @@
         </main>
         <!-- footer -->
         <footer class="section-last">
-            <a class="logo" href="">Web<span class="accent-secondary">Studio</span></a>
+            <a class="logo" href="/index.html">Web<span class="accent-secondary">Studio</span></a>
             <ul class="footer-raws">
                 <li> <address>г. Киев, пр-т Леси Украинки, 26</address></li>
                 <li> <a href="mailto:info@example.com">info@example.com</a></li>
-                <li> <a href="tel:+380991111111">+38 099 111 11 11></a></li>
+                <li> <a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </footer>
     </body>
