--- a/index.html
+++ b/index.html
@@ -12,20 +12,21 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
     <body class="page">
-        <nav>
-            <header>
-                <a class="logo" href="/index.html">Web<span class="accent">Studio</span></a>
-                <ul class="site-nav">
-                    <li><a href="">Студия</a></li>
-                    <li><a href="portfolio.html">Портфолио</a></li>
-                    <li><a href="">Контакты</a></li>
-                </ul>
+        <header>
+                <nav>
+                    <a class="logo" href="index.html">Web<span class="accent">Studio</span></a>
+                    <ul class="site-nav">
+                        <li><a class="active" href="index.html">Студия</a></li>
+                        <li><a href="portfolio.html">Портфолио</a></li>
+                        <li><a href="">Контакты</a></li>
+                    </ul>
+                </nav>
                 <ul class="auth-nav">
                     <li><a href="">info@devstudio.com</a></li>
                     <li><a href="">+38 096 111 11 11</a></li>
                 </ul>
-            </header>
-        </nav>
+        </header>
+       
         <main>
             <!-- section1 hero -->
             <section class="hero">
@@ -91,7 +92,7 @@
         </main>
         <!-- footer -->
         <footer class="section-last">
-            <a class="logo" href="/index.html">Web<span class="accent-secondary">Studio</span></a>
+            <a class="logo" href="index.html">Web<span class="accent-secondary">Studio</span></a>
             <ul class="footer-raws">
                 <li> <address>г. Киев, пр-т Леси Украинки, 26</address></li>
                 <li> <a href="mailto:info@example.com">info@example.com</a></li>
