--- a/portfolio.html
+++ b/portfolio.html
@@ -12,87 +12,82 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
     <body class="page">
-        <nav>
-            <header>
-                <a class="logo" href="/index.html">Web<span class="accent">Studio</span></a>
+        <header>
+            <nav>
+                <a class="logo" href="index.html">Web<span class="accent">Studio</span></a>
                 <ul class="site-nav">
-                    <li><a href="">Студия</a></li>
-                    <li><a href="/portfolio.html">Портфолио</a></li>
+                    <li><a href="index.html">Студия</a></li>
+                    <li><a class="active" href="portfolio.html">Портфолио</a></li>
                     <li><a href="">Контакты</a></li>
                 </ul>
-                <ul class="auth-nav">
-                    <li><a href="">info@devstudio.com</a></li>
-                    <li><a href="">+38 096 111 11 11</a></li>
-                </ul>
-            </header>
-        </nav>
+            </nav>
+            <ul class="auth-nav">
+                <li><a href="">info@devstudio.com</a></li>
+                <li><a href="">+38 096 111 11 11</a></li>
+            </ul>
+        </header>
+
         <main>
            <!-- Work examples -->
             <section>
                 <!-- Work filter -->
-                <ul class="porffolio-filter">
-                    <li><button type="button">Все</button></li>
-                    <li><button type="button">Веб-сайты</button></li>
-                    <li><button type="button">Приложения</button></li>
-                    <li><button type="button">Дизайн</button></li>
-                    <li><button type="button">Маркетинг</button></li>
-                </ul>
+                <nav>
+                    <ul class="porffolio-filter">
+                        <li><button type="button">Все</button></li>
+                        <li><button type="button">Веб-сайты</button></li>
+                        <li><button type="button">Приложения</button></li>
+                        <li><button type="button">Дизайн</button></li>
+                        <li><button type="button">Маркетинг</button></li>
+                    </ul>
+                </nav>
                 <!--Work-cards-->
                 <ul>
                     <li>
                         <img src="./images/img1.jpg" width="370" alt="Ноутбук открыт на веб-странице">
                         <h3 class="portfolio-title">Технокряк</h3>
                         <p class="portfolio-work-title">Веб-сайт</p>
-                        <p class="portfolio-work-item">Технокряк это современная площадка расространения коронавируса. Комании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конурентов</p>
                     </li>
                     <li>
                         <img src="./images/img2.jpg" width="370" alt="Игра в бскетбол">
                         <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
                         <p class="portfolio-work-title">Дизайн</p>
-                        <p class="portfolio-work-item">Технокряк это современная площадка расространения коронавируса. Комании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конурентов</p>
                     </li>
                     <li>
                         <img src="./images/img3.jpg" width="370" alt="Логотип рыбного ресторана">
                         <h3 class="portfolio-title">Ресторан Seafood</h3>
                         <p class="portfolio-work-title">Приложение</p>
-                        <p class="portfolio-work-item">Технокряк это современная площадка расространения коронавируса. Комании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конурентов</p>
                     </li>
                     <li>
                         <img src="./images/img4.jpg" width="370" alt="Наушники">
                         <h3 class="portfolio-title">Проект Prime</h3>
                         <p class="portfolio-work-title">Маркетинг</p>
-                        <p class="portfolio-work-item">Технокряк это современная площадка расространения коронавируса. Комании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конурентов</p>
                     </li>
                     <li>
                         <img src="./images/img5.jpg" width="370" alt="Две коробки">
                         <h3 class="portfolio-title">Проект Boxes</h3>
                         <p class="portfolio-work-title">Приложение</p>
-                        <p class="portfolio-work-item">Технокряк это современная площадка расространения коронавируса. Комании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конурентов</p>
                     </li>
                     <li>
                         <img src="./images/img6.jpg" width="370" alt="ПК">
                         <h3 class="portfolio-title">Inspiration has no Borders</h3>
                         <p class="portfolio-work-title">Веб-сайт</p>
-                        <p class="portfolio-work-item">Технокряк это современная площадка расространения коронавируса. Комании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конурентов</p>
                     </li>
                     <li>
                         <img src="./images/img7.jpg" width="370" alt="Логотип">
                         <h3 class="portfolio-title">Проект LAB</h3>
                         <p class="portfolio-work-title">Маркетинг</p>
-                        <p class="portfolio-work-item">Технокряк это современная площадка расространения коронавируса. Комании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конурентов</p>
                     </li>
                     <li>
                         <img src="./images/img8.jpg" width="370" alt="Мужчина работает за ноутбуком">
                         <h3 class="portfolio-title">Growing Business</h3>
                         <p class="portfolio-work-title">Приложение</p>
-                        <p class="portfolio-work-item">Технокряк это современная площадка расространения коронавируса. Комании используют эту платформу для цифрового шпионажа и атак на защищенные сервера конурентов</p>
                     </li>
                 </ul>
            </section>
         </main>
         <!-- footer -->
         <footer class="section-last">
-            <a class="logo" href="/index.html">Web<span class="accent-secondary">Studio</span></a>
+            <a class="logo" href="index.html">Web<span class="accent-secondary">Studio</span></a>
             <ul class="footer-raws">
                 <li> <address>г. Киев, пр-т Леси Украинки, 26</address></li>
                 <li> <a href="mailto:info@example.com">info@example.com</a></li>
