--- a/portfolio.html
+++ b/portfolio.html
@@ -1,34 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webstudio</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="./css/style.css">
-</head>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Webstudio</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+            rel="stylesheet"
+        />
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css"
+        />
+        <link rel="stylesheet" href="./css/reset.css" />
+        <link rel="stylesheet" href="./css/style.css" />
+    </head>
     <body class="page">
         <header>
-            <nav>
-                <a class="logo" href="index.html">Web<span class="accent">Studio</span></a>
-                <ul class="site-nav">
-                    <li><a href="index.html">Студия</a></li>
-                    <li><a class="active" href="portfolio.html">Портфолио</a></li>
-                    <li><a href="">Контакты</a></li>
+            <div class="container">
+                <nav class="container-nav">
+                    <a class="logo" href="index.html">Web<span class="accent">Studio</span></a>
+                    <ul class="site-nav">
+                        <div class="nav">
+                            <li><a class="active" href="./index.html">Студия</a></li>
+                            <li><a href="./portfolio.html">Портфолио</a></li>
+                            <li><a href="">Контакты</a></li>
+                        </div>
+                    </ul>
+                </nav>
+                <ul class="auth-nav">
+                    <li><a href="">info@devstudio.com</a></li>
+                    <li><a href="">+38 096 111 11 11</a></li>
                 </ul>
-            </nav>
-            <ul class="auth-nav">
-                <li><a href="">info@devstudio.com</a></li>
-                <li><a href="">+38 096 111 11 11</a></li>
-            </ul>
+            </div>
         </header>
 
         <main>
-           <!-- Work examples -->
+            <!-- Work examples -->
             <section>
                 <!-- Work filter -->
                 <nav>
@@ -43,56 +54,70 @@
                 <!--Work-cards-->
                 <ul>
                     <li>
-                        <img src="./images/img1.jpg" width="370" alt="Ноутбук открыт на веб-странице">
+                        <img
+                            src="./images/img1.jpg"
+                            width="370"
+                            alt="Ноутбук открыт на веб-странице"
+                        />
                         <h3 class="portfolio-title">Технокряк</h3>
                         <p class="portfolio-work-title">Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./images/img2.jpg" width="370" alt="Игра в бскетбол">
+                        <img src="./images/img2.jpg" width="370" alt="Игра в бскетбол" />
                         <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
                         <p class="portfolio-work-title">Дизайн</p>
                     </li>
                     <li>
-                        <img src="./images/img3.jpg" width="370" alt="Логотип рыбного ресторана">
+                        <img src="./images/img3.jpg" width="370" alt="Логотип рыбного ресторана" />
                         <h3 class="portfolio-title">Ресторан Seafood</h3>
                         <p class="portfolio-work-title">Приложение</p>
                     </li>
                     <li>
-                        <img src="./images/img4.jpg" width="370" alt="Наушники">
+                        <img src="./images/img4.jpg" width="370" alt="Наушники" />
                         <h3 class="portfolio-title">Проект Prime</h3>
                         <p class="portfolio-work-title">Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./images/img5.jpg" width="370" alt="Две коробки">
+                        <img src="./images/img5.jpg" width="370" alt="Две коробки" />
                         <h3 class="portfolio-title">Проект Boxes</h3>
                         <p class="portfolio-work-title">Приложение</p>
                     </li>
                     <li>
-                        <img src="./images/img6.jpg" width="370" alt="ПК">
+                        <img src="./images/img6.jpg" width="370" alt="ПК" />
                         <h3 class="portfolio-title">Inspiration has no Borders</h3>
                         <p class="portfolio-work-title">Веб-сайт</p>
                     </li>
                     <li>
-                        <img src="./images/img7.jpg" width="370" alt="Логотип">
+                        <img src="./images/img7.jpg" width="370" alt="Логотип" />
                         <h3 class="portfolio-title">Проект LAB</h3>
                         <p class="portfolio-work-title">Маркетинг</p>
                     </li>
                     <li>
-                        <img src="./images/img8.jpg" width="370" alt="Мужчина работает за ноутбуком">
+                        <img
+                            src="./images/img8.jpg"
+                            width="370"
+                            alt="Мужчина работает за ноутбуком"
+                        />
                         <h3 class="portfolio-title">Growing Business</h3>
                         <p class="portfolio-work-title">Приложение</p>
                     </li>
                 </ul>
-           </section>
+            </section>
         </main>
         <!-- footer -->
         <footer class="section-last">
-            <a class="logo" href="index.html">Web<span class="accent-secondary">Studio</span></a>
-            <ul class="footer-raws">
-                <li> <address>г. Киев, пр-т Леси Украинки, 26</address></li>
-                <li> <a href="mailto:info@example.com">info@example.com</a></li>
-                <li> <a href="tel:+380991111111">+38 099 111 11 11</a></li>
-            </ul>
+            <div class="container">
+                <div class="footer-card">
+                    <a class="logo" href="./index.html"
+                        >Web<span class="accent-secondary">Studio</span></a
+                    >
+                    <ul class="footer-raws">
+                        <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
+                        <li><a href="mailto:info@example.com">info@example.com</a></li>
+                        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                    </ul>
+                </div>
+            </div>
         </footer>
     </body>
 </html>
