Добавила падинги и флексы к портфолио

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -47,36 +47,24 @@
                 </div>
             </section>
             <!-- section2 Features -->
-            <section class="section">
+            <section class="feature-box">
                 <div class="container">
                     <ul class="feature-list">
                         <li>
                             <h3 class="title">Внимание к деталям</h3>
-                            <p>
-                                Идейные соображения, а также начало повседневной работы по
-                                формированию позиции.
-                            </p>
+                            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                         </li>
                         <li>
                             <h3 class="title">Пунктуальность</h3>
-                            <p>
-                                Задача организации, в особенности же рамки и место обучения кадров
-                                влечет за собой.
-                            </p>
+                            <p>Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                         </li>
                         <li>
                             <h3 class="title">Планирование</h3>
-                            <p>
-                                Равным образом консультация с широким активом в значительной степени
-                                обуславливает.
-                            </p>
+                            <p>Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                         </li>
                         <li>
                             <h3 class="title">Современные технологии</h3>
-                            <p>
-                                Значимость этих проблем настолько очевидна, что реализация плановых
-                                заданий.
-                            </p>
+                            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                         </li>
                     </ul>
                 </div>
@@ -117,27 +105,19 @@
                 </div>
             </section>
             <!-- section4 our team -->
-            <section class="section">
+            <section class="section best">
                 <div class="container">
                     <h2 class="section-title">Наша команда</h2>
                     <ul class="team">
                         <li>
-                            <img
-                                src="./images/photo1.jpg"
-                                width="270"
-                                alt="мужчина в очках с бородой"
-                            />
+                            <img src="./images/photo1.jpg" width="270" alt="мужчина в очках с бородой" />
                             <div class="team-member">
                                 <h3 class="team-title">Игорь Демьяненко</h3>
                                 <p>Product Designer</p>
                             </div>
                         </li>
                         <li>
-                            <img
-                                src="./images/photo2.jpg"
-                                width="270"
-                                alt="девушка блондинка в очках"
-                            />
+                            <img src="./images/photo2.jpg" width="270" alt="девушка блондинка в очках" />
                             <div class="team-member">
                                 <h3 class="team-title">Ольга Репина</h3>
                                 <p>Frontend Developer</p>
@@ -151,11 +131,7 @@
                             </div>
                         </li>
                         <li>
-                            <img
-                                src="./images/photo4.jpg"
-                                width="270"
-                                alt="парень с бородой и очками"
-                            />
+                            <img src="./images/photo4.jpg" width="270" alt="парень с бородой и очками" />
                             <div class="team-member">
                                 <h3 class="team-title">Михаил Ермаков</h3>
                                 <p>UI Designer</p>
@@ -169,9 +145,7 @@
         <footer class="section-last">
             <div class="container">
                 <div class="footer-card">
-                    <a class="logo" href="./index.html"
-                        >Web<span class="accent-secondary">Studio</span></a
-                    >
+                    <a class="logo" href="./index.html">Web<span class="accent-secondary">Studio</span></a>
                     <ul class="footer-raws">
                         <li class="footer-list">
                             <address>г. Киев, пр-т Леси Украинки, 26</address>
