--- a/portfolio.html
+++ b/portfolio.html
@@ -25,8 +25,8 @@
                     <a class="logo" href="index.html">Web<span class="accent">Studio</span></a>
                     <ul class="site-nav">
                         <div class="nav">
-                            <li><a class="active" href="./index.html">Студия</a></li>
-                            <li><a href="./portfolio.html">Портфолио</a></li>
+                            <li><a href="./index.html">Студия</a></li>
+                            <li><a class="active" href="./portfolio.html">Портфолио</a></li>
                             <li><a href="">Контакты</a></li>
                         </div>
                     </ul>
@@ -40,11 +40,11 @@
 
         <main>
             <!-- Work examples -->
-            <section>
+            <section class="container">
                 <!-- Work filter -->
                 <nav>
                     <ul class="porffolio-filter">
-                        <li><button type="button">Все</button></li>
+                        <li><button class="active-filter" type="button">Все</button></li>
                         <li><button type="button">Веб-сайты</button></li>
                         <li><button type="button">Приложения</button></li>
                         <li><button type="button">Дизайн</button></li>
@@ -52,54 +52,62 @@
                     </ul>
                 </nav>
                 <!--Work-cards-->
-                <ul>
+                <ul class="work-card">
                     <li>
-                        <img
-                            src="./images/img1.jpg"
-                            width="370"
-                            alt="Ноутбук открыт на веб-странице"
-                        />
-                        <h3 class="portfolio-title">Технокряк</h3>
-                        <p class="portfolio-work-title">Веб-сайт</p>
+                        <img src="./images/img1.jpg" width="370" alt="Ноутбук открыт на веб-странице" />
+                        <div class="port-card">
+                            <h3 class="portfolio-title">Технокряк</h3>
+                            <p class="portfolio-work-title">Веб-сайт</p>
+                        </div>
                     </li>
                     <li>
                         <img src="./images/img2.jpg" width="370" alt="Игра в бскетбол" />
-                        <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
-                        <p class="portfolio-work-title">Дизайн</p>
+                        <div class="port-card">
+                            <h3 class="portfolio-title">Постер New Orlean vs Golden Star</h3>
+                            <p class="portfolio-work-title">Дизайн</p>
+                        </div>
                     </li>
                     <li>
                         <img src="./images/img3.jpg" width="370" alt="Логотип рыбного ресторана" />
-                        <h3 class="portfolio-title">Ресторан Seafood</h3>
-                        <p class="portfolio-work-title">Приложение</p>
+                        <div class="port-card">
+                            <h3 class="portfolio-title">Ресторан Seafood</h3>
+                            <p class="portfolio-work-title">Приложение</p>
+                        </div>
                     </li>
                     <li>
                         <img src="./images/img4.jpg" width="370" alt="Наушники" />
-                        <h3 class="portfolio-title">Проект Prime</h3>
-                        <p class="portfolio-work-title">Маркетинг</p>
+                        <div class="port-card">
+                            <h3 class="portfolio-title">Проект Prime</h3>
+                            <p class="portfolio-work-title">Маркетинг</p>
+                        </div>
                     </li>
                     <li>
                         <img src="./images/img5.jpg" width="370" alt="Две коробки" />
-                        <h3 class="portfolio-title">Проект Boxes</h3>
-                        <p class="portfolio-work-title">Приложение</p>
+                        <div class="port-card">
+                            <h3 class="portfolio-title">Проект Boxes</h3>
+                            <p class="portfolio-work-title">Приложение</p>
+                        </div>
                     </li>
                     <li>
                         <img src="./images/img6.jpg" width="370" alt="ПК" />
-                        <h3 class="portfolio-title">Inspiration has no Borders</h3>
-                        <p class="portfolio-work-title">Веб-сайт</p>
+                        <div class="port-card">
+                            <h3 class="portfolio-title">Inspiration has no Borders</h3>
+                            <p class="portfolio-work-title">Веб-сайт</p>
+                        </div>
                     </li>
                     <li>
                         <img src="./images/img7.jpg" width="370" alt="Логотип" />
-                        <h3 class="portfolio-title">Проект LAB</h3>
-                        <p class="portfolio-work-title">Маркетинг</p>
+                        <div class="port-card">
+                            <h3 class="portfolio-title">Проект LAB</h3>
+                            <p class="portfolio-work-title">Маркетинг</p>
+                        </div>
                     </li>
                     <li>
-                        <img
-                            src="./images/img8.jpg"
-                            width="370"
-                            alt="Мужчина работает за ноутбуком"
-                        />
-                        <h3 class="portfolio-title">Growing Business</h3>
-                        <p class="portfolio-work-title">Приложение</p>
+                        <img src="./images/img8.jpg" width="370" alt="Мужчина работает за ноутбуком" />
+                        <div class="port-card">
+                            <h3 class="portfolio-title">Growing Business</h3>
+                            <p class="portfolio-work-title">Приложение</p>
+                        </div>
                     </li>
                 </ul>
             </section>
@@ -108,13 +116,17 @@
         <footer class="section-last">
             <div class="container">
                 <div class="footer-card">
-                    <a class="logo" href="./index.html"
-                        >Web<span class="accent-secondary">Studio</span></a
-                    >
+                    <a class="logo" href="./index.html">Web<span class="accent-secondary">Studio</span></a>
                     <ul class="footer-raws">
-                        <li><address>г. Киев, пр-т Леси Украинки, 26</address></li>
-                        <li><a href="mailto:info@example.com">info@example.com</a></li>
-                        <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
+                        <li class="footer-list">
+                            <address>г. Киев, пр-т Леси Украинки, 26</address>
+                        </li>
+                        <li class="footer-list">
+                            <a href="mailto:info@example.com">info@example.com</a>
+                        </li>
+                        <li class="footer-list">
+                            <a href="tel:+380991111111">+38 099 111 11 11</a>
+                        </li>
                     </ul>
                 </div>
             </div>
